updated intake code